subprojects {
    apply plugin: "java"

    sourceCompatibility = 15
    targetCompatibility = 15

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.slf4j:slf4j-api:1.7.30'
        implementation 'org.slf4j:slf4j-simple:1.7.30'

        testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
    }

    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
        }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }

    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }

    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }

}

project(':jep-384_records') {}
project(':jep-358_helpful-npe') {}
project(':jep-378_text-blocks') {}
